[package]
name = "banner-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
imageproc = "0.23.0"
indicatif = "0.17.2"
rayon = "1.6.1"
rusttype = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
ureq = { version = "2.5.0", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
